--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </button>
         <div class="container_2btn">
             <button class="progress">Unlock Progress 0/4</button>
-            <button class="download_button" onclick="downloadZip()" disabled>Download <br>(MartisSpXLevi)</button>
+            <button class="download_button" onclick="downloadZip()" disabled>Download <br>(MartisSp X Levi)</button>
         </div>
     </div>
     
